samples/_failures_safe/1761128266_d77bda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8592864.c: In function ‘main’:
./samples/SAFE/__tmp_a8592864.c:183:16: error: missing terminating " character
  183 |         printf("
      |                ^
./samples/SAFE/__tmp_a8592864.c:183:9: error: expected expression at end of input
  183 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_a8592864.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8592864.c:183:9: error: expected declaration or statement at end of input
